<resources>
    <string name="app_name">Notes</string>


    <!--menu for single note activity-->
    <string name="action_add_file">Add File</string>
    <string name="action_delete_note">Delete</string>
    <string name="action_add_tag">Add Tag</string>
    <string name="action_share_note">Share</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Search…</string>


    <!--single note activity-->
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="textnote">Text of Note</string>
    <string name="notification_note">Notification</string>
    <string name="tag_note">Tag</string>

    <!--add tag or create new-->
    <string name="cancel">Cancel</string>
    <string name="create_new_tag">Create new tag</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="choose">Choose tag</string>
    <string name="tag_name">Tag name</string>
    <string name="choose_color">Choose color</string>

    <!--popup menu-->
    <string name="font_small">Small</string>
    <string name="font_medium">Medium</string>
    <string name="font_large">Large</string>

    <!--file chooser-->
    <string name="choose_type">Add file to Note</string>
    <string name="picture">Picture</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>

    <!--left menu-->
    <string name="all_notes">All Notes</string>
    <string name="_0">0</string>
    <string name="delete_all">Delete All</string>
    <string name="sort_a_z">Sort A-Z</string>
    <string name="sort_by_date">Sort By Date</string>
    <string name="tags">Sort By Tag</string>
    <string name="about">About</string>

    <!--activity main-->


    <!--note card-->

</resources>
