<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/noteAll"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/all_notes"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/deleteAll"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_all"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/sortByABC"
        android:icon="@drawable/ic_sort_by_alpha_black_24dp"
        android:title="@string/sort_a_z"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sortByDate"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/sort_by_date"
        app:showAsAction="never"/>
    <item
        android:id="@+id/tags"
        android:icon="@drawable/ic_tag_black_24dp"
        android:title="@string/tags"
        app:showAsAction="never"/>

</menu>