<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_tag"
        android:icon="@drawable/ic_tag_black_24dp"
        android:title="@string/action_add_tag"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_add_file"
        android:icon="@drawable/ic_insert_drive_file_black_24dp"
        android:title="@string/action_add_file"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_delete_note"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/action_delete_note"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share_note"
        android:title="@string/action_share_note"
        app:showAsAction="never"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>
</menu>

    <!--android:icon="@drawable/ic_share_black_24dp"-->