<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/font_small"
            android:icon="@drawable/ic_tag_black_24dp"
            android:checkable="true"
            android:title="@string/font_small"
            >
        </item>
        <item
            android:id="@+id/font_medium"
            android:icon="@drawable/ic_tag_black_24dp"
            android:checkable="true"
            android:title="@string/font_medium"
            >
        </item>
        <item
            android:id="@+id/font_large"
            android:icon="@drawable/ic_tag_black_24dp"
            android:checkable="true"
            android:title="@string/font_large"

            >
        </item>
    </group>
</menu>