<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?attr/colorAccent">
    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="20dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/noteName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/all_notes"
                android:textSize="22sp"
                android:textColor="@color/colorIcons"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/noteSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/_0"
                android:textSize="22sp"
                android:textColor="@color/colorIcons"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="8dp"
            android:background="@color/colorPrimary" />
        <TextView
            android:id="@+id/deleteAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/delete_all"
            android:textSize="22sp"
            android:textColor="@color/colorIcons"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_delete_black_24dp"  />

        <TextView
        android:id="@+id/sortByABC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:padding="10dp"
        android:text="@string/sort_a_z"
        android:textSize="22sp"
        android:textColor="@color/colorIcons"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_sort_by_alpha_black_24dp"
        />

        <TextView
            android:id="@+id/sortByDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_access_time_white_24dp"
            android:drawablePadding="10dp"
            android:padding="10dp"
            android:text="@string/sort_by_date"
            android:textColor="@color/colorIcons"
            android:textSize="22sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="8dp"
            android:background="@color/colorPrimary" />
        <TextView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/tags"
            android:textSize="22sp"
            android:textColor="@color/colorIcons"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_tag_black_24dp"
              />
        <LinearLayout
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="8dp"
            android:background="@color/colorPrimary" />
        <TextView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:clickable="true"
            android:padding="10dp"
            android:text="@string/about"
            android:textSize="22sp"
            android:textColor="@color/colorIcons"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_info_white_24dp"
            />
    </LinearLayout>
</LinearLayout>