<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:fitsSystemWindows="true"
    tools:context="com.project.me.notes.SingleNoteActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="25dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_note"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorControlHighlight"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/textSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_text_size_black_24dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <ImageView
                android:id="@+id/textColor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_lens_white_24dp">

            </ImageView>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <ImageView
                android:id="@+id/checklist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_done_black_24dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary" />

            <ImageView
                android:id="@+id/addNotification"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:padding="10dp"
                android:src="@drawable/ic_add_alert_black_24dp" />

        </LinearLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:hint="@string/date"
                android:padding="10dp"
                android:textSize="@dimen/medium_date_size" />

            <EditText
                android:id="@+id/titleNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:hint="@string/title"
                android:lineSpacingExtra="8dp"
                android:maxLines="1"
                android:maxLength="20"
                android:singleLine="true"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="@dimen/medium_title_size" />

            <EditText
                android:id="@+id/textNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:color/transparent"
                android:hint="@string/textnote"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textIsSelectable="true"
                android:textSize="@dimen/medium_text_size" />

            <TextView
                android:id="@+id/notificationNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/ic_notifications_active_note_24dp"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:text="@string/notification_note"
                android:textSize="@dimen/medium_notification_size"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tagNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:drawableLeft="@drawable/ic_tag_blue_24dp"
                android:drawablePadding="5dp"
                android:padding="10dp"
                android:hint="@string/tag_note"
                android:textSize="@dimen/medium_tag_size"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/attachment_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
            <VideoView
                android:id="@+id/attachment_video"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />



        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>




